ocat/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     empty -> <empty>
Rule 3     statements -> statement
Rule 4     statements -> statements statement
Rule 5     statements -> empty
Rule 6     statement -> declaration
Rule 7     statement -> assignment
Rule 8     statement -> call
Rule 9     statement -> for
Rule 10    statement -> if
Rule 11    declaration -> TYPE assignment
Rule 12    declaration -> MUT TYPE NAME NEWLINE
Rule 13    declaration -> MUT TYPE assignment
Rule 14    assignment -> NAME ASSIGN expression NEWLINE
Rule 15    assignment -> NAME ASSIGN call NEWLINE
Rule 16    call -> FUNCNAME LPAREN arguments RPAREN NEWLINE
Rule 17    for -> FOR NAME IN LPAREN arguments RPAREN LOOP statements END LOOP NEWLINE
Rule 18    if -> IF expression THEN statements END IF NEWLINE
Rule 19    if -> IF expression THEN statements ELSE statements END IF NEWLINE
Rule 20    arguments -> expression
Rule 21    arguments -> arguments COMMA expression
Rule 22    arguments -> empty
Rule 23    expression -> expression IF expression ELSE expression
Rule 24    expression -> expression LSHIFT expression
Rule 25    expression -> expression RSHIFT expression
Rule 26    expression -> expression BITAND expression
Rule 27    expression -> expression BITXOR expression
Rule 28    expression -> expression BITOR expression
Rule 29    expression -> expression EXP expression
Rule 30    expression -> expression MOD expression
Rule 31    expression -> expression ADD expression
Rule 32    expression -> expression SUB expression
Rule 33    expression -> expression MUL expression
Rule 34    expression -> expression DIV expression
Rule 35    expression -> expression AND expression
Rule 36    expression -> expression XOR expression
Rule 37    expression -> expression NEQ expression
Rule 38    expression -> expression GTE expression
Rule 39    expression -> expression LTE expression
Rule 40    expression -> expression EQ expression
Rule 41    expression -> expression LT expression
Rule 42    expression -> expression GT expression
Rule 43    expression -> expression OR expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> SUB expression
Rule 46    expression -> INV expression
Rule 47    expression -> NOT expression
Rule 48    expression -> NAME DOT NAME
Rule 49    expression -> NAME
Rule 50    expression -> INT
Rule 51    expression -> FLOAT
Rule 52    expression -> SCI
Rule 53    expression -> BOOL

Terminals, with rules where they appear

ADD                  : 31
AND                  : 35
ASSIGN               : 14 15
BITAND               : 26
BITOR                : 28
BITXOR               : 27
BOOL                 : 53
COMMA                : 21
DIV                  : 34
DOT                  : 48
ELSE                 : 19 23
END                  : 17 18 19
EQ                   : 40
EXP                  : 29
FLOAT                : 51
FOR                  : 17
FUNCNAME             : 16
GT                   : 42
GTE                  : 38
IF                   : 18 18 19 19 23
IN                   : 17
INT                  : 50
INV                  : 46
LOOP                 : 17 17
LPAREN               : 16 17 44
LSHIFT               : 24
LT                   : 41
LTE                  : 39
MOD                  : 30
MUL                  : 33
MUT                  : 12 13
NAME                 : 12 14 15 17 48 48 49
NEQ                  : 37
NEWLINE              : 12 14 15 16 17 18 19
NOT                  : 47
OR                   : 43
RPAREN               : 16 17 44
RSHIFT               : 25
SCI                  : 52
SUB                  : 32 45
THEN                 : 18 19
TYPE                 : 11 12 13
XOR                  : 36
error                : 

Nonterminals, with rules where they appear

arguments            : 16 17 21
assignment           : 7 11 13
call                 : 8 15
declaration          : 6
empty                : 5 22
expression           : 14 18 19 20 21 23 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 45 46 47
for                  : 9
if                   : 10
program              : 0
statement            : 3 4
statements           : 1 4 17 18 19 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (3) statements -> . statement
    (4) statements -> . statements statement
    (5) statements -> . empty
    (6) statement -> . declaration
    (7) statement -> . assignment
    (8) statement -> . call
    (9) statement -> . for
    (10) statement -> . if
    (2) empty -> .
    (11) declaration -> . TYPE assignment
    (12) declaration -> . MUT TYPE NAME NEWLINE
    (13) declaration -> . MUT TYPE assignment
    (14) assignment -> . NAME ASSIGN expression NEWLINE
    (15) assignment -> . NAME ASSIGN call NEWLINE
    (16) call -> . FUNCNAME LPAREN arguments RPAREN NEWLINE
    (17) for -> . FOR NAME IN LPAREN arguments RPAREN LOOP statements END LOOP NEWLINE
    (18) if -> . IF expression THEN statements END IF NEWLINE
    (19) if -> . IF expression THEN statements ELSE statements END IF NEWLINE

  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for MUT resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FUNCNAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 2 (empty -> .)
    TYPE            shift and go to state 10
    MUT             shift and go to state 11
    NAME            shift and go to state 12
    FUNCNAME        shift and go to state 13
    FOR             shift and go to state 14
    IF              shift and go to state 15

  ! TYPE            [ reduce using rule 2 (empty -> .) ]
  ! MUT             [ reduce using rule 2 (empty -> .) ]
  ! NAME            [ reduce using rule 2 (empty -> .) ]
  ! FUNCNAME        [ reduce using rule 2 (empty -> .) ]
  ! FOR             [ reduce using rule 2 (empty -> .) ]
  ! IF              [ reduce using rule 2 (empty -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    call                           shift and go to state 7
    for                            shift and go to state 8
    if                             shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (4) statements -> statements . statement
    (6) statement -> . declaration
    (7) statement -> . assignment
    (8) statement -> . call
    (9) statement -> . for
    (10) statement -> . if
    (11) declaration -> . TYPE assignment
    (12) declaration -> . MUT TYPE NAME NEWLINE
    (13) declaration -> . MUT TYPE assignment
    (14) assignment -> . NAME ASSIGN expression NEWLINE
    (15) assignment -> . NAME ASSIGN call NEWLINE
    (16) call -> . FUNCNAME LPAREN arguments RPAREN NEWLINE
    (17) for -> . FOR NAME IN LPAREN arguments RPAREN LOOP statements END LOOP NEWLINE
    (18) if -> . IF expression THEN statements END IF NEWLINE
    (19) if -> . IF expression THEN statements ELSE statements END IF NEWLINE

    $end            reduce using rule 1 (program -> statements .)
    TYPE            shift and go to state 10
    MUT             shift and go to state 11
    NAME            shift and go to state 12
    FUNCNAME        shift and go to state 13
    FOR             shift and go to state 14
    IF              shift and go to state 15

    statement                      shift and go to state 16
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    call                           shift and go to state 7
    for                            shift and go to state 8
    if                             shift and go to state 9

state 3

    (3) statements -> statement .

    TYPE            reduce using rule 3 (statements -> statement .)
    MUT             reduce using rule 3 (statements -> statement .)
    NAME            reduce using rule 3 (statements -> statement .)
    FUNCNAME        reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)


state 4

    (5) statements -> empty .

    TYPE            reduce using rule 5 (statements -> empty .)
    MUT             reduce using rule 5 (statements -> empty .)
    NAME            reduce using rule 5 (statements -> empty .)
    FUNCNAME        reduce using rule 5 (statements -> empty .)
    FOR             reduce using rule 5 (statements -> empty .)
    IF              reduce using rule 5 (statements -> empty .)
    $end            reduce using rule 5 (statements -> empty .)
    END             reduce using rule 5 (statements -> empty .)
    ELSE            reduce using rule 5 (statements -> empty .)


state 5

    (6) statement -> declaration .

    TYPE            reduce using rule 6 (statement -> declaration .)
    MUT             reduce using rule 6 (statement -> declaration .)
    NAME            reduce using rule 6 (statement -> declaration .)
    FUNCNAME        reduce using rule 6 (statement -> declaration .)
    FOR             reduce using rule 6 (statement -> declaration .)
    IF              reduce using rule 6 (statement -> declaration .)
    $end            reduce using rule 6 (statement -> declaration .)
    END             reduce using rule 6 (statement -> declaration .)
    ELSE            reduce using rule 6 (statement -> declaration .)


state 6

    (7) statement -> assignment .

    TYPE            reduce using rule 7 (statement -> assignment .)
    MUT             reduce using rule 7 (statement -> assignment .)
    NAME            reduce using rule 7 (statement -> assignment .)
    FUNCNAME        reduce using rule 7 (statement -> assignment .)
    FOR             reduce using rule 7 (statement -> assignment .)
    IF              reduce using rule 7 (statement -> assignment .)
    $end            reduce using rule 7 (statement -> assignment .)
    END             reduce using rule 7 (statement -> assignment .)
    ELSE            reduce using rule 7 (statement -> assignment .)


state 7

    (8) statement -> call .

    TYPE            reduce using rule 8 (statement -> call .)
    MUT             reduce using rule 8 (statement -> call .)
    NAME            reduce using rule 8 (statement -> call .)
    FUNCNAME        reduce using rule 8 (statement -> call .)
    FOR             reduce using rule 8 (statement -> call .)
    IF              reduce using rule 8 (statement -> call .)
    $end            reduce using rule 8 (statement -> call .)
    END             reduce using rule 8 (statement -> call .)
    ELSE            reduce using rule 8 (statement -> call .)


state 8

    (9) statement -> for .

    TYPE            reduce using rule 9 (statement -> for .)
    MUT             reduce using rule 9 (statement -> for .)
    NAME            reduce using rule 9 (statement -> for .)
    FUNCNAME        reduce using rule 9 (statement -> for .)
    FOR             reduce using rule 9 (statement -> for .)
    IF              reduce using rule 9 (statement -> for .)
    $end            reduce using rule 9 (statement -> for .)
    END             reduce using rule 9 (statement -> for .)
    ELSE            reduce using rule 9 (statement -> for .)


state 9

    (10) statement -> if .

    TYPE            reduce using rule 10 (statement -> if .)
    MUT             reduce using rule 10 (statement -> if .)
    NAME            reduce using rule 10 (statement -> if .)
    FUNCNAME        reduce using rule 10 (statement -> if .)
    FOR             reduce using rule 10 (statement -> if .)
    IF              reduce using rule 10 (statement -> if .)
    $end            reduce using rule 10 (statement -> if .)
    END             reduce using rule 10 (statement -> if .)
    ELSE            reduce using rule 10 (statement -> if .)


state 10

    (11) declaration -> TYPE . assignment
    (14) assignment -> . NAME ASSIGN expression NEWLINE
    (15) assignment -> . NAME ASSIGN call NEWLINE

    NAME            shift and go to state 12

    assignment                     shift and go to state 17

state 11

    (12) declaration -> MUT . TYPE NAME NEWLINE
    (13) declaration -> MUT . TYPE assignment

    TYPE            shift and go to state 18


state 12

    (14) assignment -> NAME . ASSIGN expression NEWLINE
    (15) assignment -> NAME . ASSIGN call NEWLINE

    ASSIGN          shift and go to state 19


state 13

    (16) call -> FUNCNAME . LPAREN arguments RPAREN NEWLINE

    LPAREN          shift and go to state 20


state 14

    (17) for -> FOR . NAME IN LPAREN arguments RPAREN LOOP statements END LOOP NEWLINE

    NAME            shift and go to state 21


state 15

    (18) if -> IF . expression THEN statements END IF NEWLINE
    (19) if -> IF . expression THEN statements ELSE statements END IF NEWLINE
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . expression LSHIFT expression
    (25) expression -> . expression RSHIFT expression
    (26) expression -> . expression BITAND expression
    (27) expression -> . expression BITXOR expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression EXP expression
    (30) expression -> . expression MOD expression
    (31) expression -> . expression ADD expression
    (32) expression -> . expression SUB expression
    (33) expression -> . expression MUL expression
    (34) expression -> . expression DIV expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression NEQ expression
    (38) expression -> . expression GTE expression
    (39) expression -> . expression LTE expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression OR expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . SUB expression
    (46) expression -> . INV expression
    (47) expression -> . NOT expression
    (48) expression -> . NAME DOT NAME
    (49) expression -> . NAME
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . SCI
    (53) expression -> . BOOL

    LPAREN          shift and go to state 24
    SUB             shift and go to state 23
    INV             shift and go to state 25
    NOT             shift and go to state 26
    NAME            shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    SCI             shift and go to state 30
    BOOL            shift and go to state 31

    expression                     shift and go to state 22

state 16

    (4) statements -> statements statement .

    TYPE            reduce using rule 4 (statements -> statements statement .)
    MUT             reduce using rule 4 (statements -> statements statement .)
    NAME            reduce using rule 4 (statements -> statements statement .)
    FUNCNAME        reduce using rule 4 (statements -> statements statement .)
    FOR             reduce using rule 4 (statements -> statements statement .)
    IF              reduce using rule 4 (statements -> statements statement .)
    $end            reduce using rule 4 (statements -> statements statement .)
    END             reduce using rule 4 (statements -> statements statement .)
    ELSE            reduce using rule 4 (statements -> statements statement .)


state 17

    (11) declaration -> TYPE assignment .

    TYPE            reduce using rule 11 (declaration -> TYPE assignment .)
    MUT             reduce using rule 11 (declaration -> TYPE assignment .)
    NAME            reduce using rule 11 (declaration -> TYPE assignment .)
    FUNCNAME        reduce using rule 11 (declaration -> TYPE assignment .)
    FOR             reduce using rule 11 (declaration -> TYPE assignment .)
    IF              reduce using rule 11 (declaration -> TYPE assignment .)
    $end            reduce using rule 11 (declaration -> TYPE assignment .)
    END             reduce using rule 11 (declaration -> TYPE assignment .)
    ELSE            reduce using rule 11 (declaration -> TYPE assignment .)


state 18

    (12) declaration -> MUT TYPE . NAME NEWLINE
    (13) declaration -> MUT TYPE . assignment
    (14) assignment -> . NAME ASSIGN expression NEWLINE
    (15) assignment -> . NAME ASSIGN call NEWLINE

    NAME            shift and go to state 32

    assignment                     shift and go to state 33

state 19

    (14) assignment -> NAME ASSIGN . expression NEWLINE
    (15) assignment -> NAME ASSIGN . call NEWLINE
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . expression LSHIFT expression
    (25) expression -> . expression RSHIFT expression
    (26) expression -> . expression BITAND expression
    (27) expression -> . expression BITXOR expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression EXP expression
    (30) expression -> . expression MOD expression
    (31) expression -> . expression ADD expression
    (32) expression -> . expression SUB expression
    (33) expression -> . expression MUL expression
    (34) expression -> . expression DIV expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression NEQ expression
    (38) expression -> . expression GTE expression
    (39) expression -> . expression LTE expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression OR expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . SUB expression
    (46) expression -> . INV expression
    (47) expression -> . NOT expression
    (48) expression -> . NAME DOT NAME
    (49) expression -> . NAME
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . SCI
    (53) expression -> . BOOL
    (16) call -> . FUNCNAME LPAREN arguments RPAREN NEWLINE

    LPAREN          shift and go to state 24
    SUB             shift and go to state 23
    INV             shift and go to state 25
    NOT             shift and go to state 26
    NAME            shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    SCI             shift and go to state 30
    BOOL            shift and go to state 31
    FUNCNAME        shift and go to state 13

    expression                     shift and go to state 34
    call                           shift and go to state 35

state 20

    (16) call -> FUNCNAME LPAREN . arguments RPAREN NEWLINE
    (20) arguments -> . expression
    (21) arguments -> . arguments COMMA expression
    (22) arguments -> . empty
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . expression LSHIFT expression
    (25) expression -> . expression RSHIFT expression
    (26) expression -> . expression BITAND expression
    (27) expression -> . expression BITXOR expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression EXP expression
    (30) expression -> . expression MOD expression
    (31) expression -> . expression ADD expression
    (32) expression -> . expression SUB expression
    (33) expression -> . expression MUL expression
    (34) expression -> . expression DIV expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression NEQ expression
    (38) expression -> . expression GTE expression
    (39) expression -> . expression LTE expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression OR expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . SUB expression
    (46) expression -> . INV expression
    (47) expression -> . NOT expression
    (48) expression -> . NAME DOT NAME
    (49) expression -> . NAME
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . SCI
    (53) expression -> . BOOL
    (2) empty -> .

    LPAREN          shift and go to state 24
    SUB             shift and go to state 23
    INV             shift and go to state 25
    NOT             shift and go to state 26
    NAME            shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    SCI             shift and go to state 30
    BOOL            shift and go to state 31
    RPAREN          reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)

    arguments                      shift and go to state 36
    expression                     shift and go to state 37
    empty                          shift and go to state 38

state 21

    (17) for -> FOR NAME . IN LPAREN arguments RPAREN LOOP statements END LOOP NEWLINE

    IN              shift and go to state 39


state 22

    (18) if -> IF expression . THEN statements END IF NEWLINE
    (19) if -> IF expression . THEN statements ELSE statements END IF NEWLINE
    (23) expression -> expression . IF expression ELSE expression
    (24) expression -> expression . LSHIFT expression
    (25) expression -> expression . RSHIFT expression
    (26) expression -> expression . BITAND expression
    (27) expression -> expression . BITXOR expression
    (28) expression -> expression . BITOR expression
    (29) expression -> expression . EXP expression
    (30) expression -> expression . MOD expression
    (31) expression -> expression . ADD expression
    (32) expression -> expression . SUB expression
    (33) expression -> expression . MUL expression
    (34) expression -> expression . DIV expression
    (35) expression -> expression . AND expression
    (36) expression -> expression . XOR expression
    (37) expression -> expression . NEQ expression
    (38) expression -> expression . GTE expression
    (39) expression -> expression . LTE expression
    (40) expression -> expression . EQ expression
    (41) expression -> expression . LT expression
    (42) expression -> expression . GT expression
    (43) expression -> expression . OR expression

    THEN            shift and go to state 41
    IF              shift and go to state 40
    LSHIFT          shift and go to state 42
    RSHIFT          shift and go to state 43
    BITAND          shift and go to state 44
    BITXOR          shift and go to state 45
    BITOR           shift and go to state 46
    EXP             shift and go to state 47
    MOD             shift and go to state 48
    ADD             shift and go to state 49
    SUB             shift and go to state 50
    MUL             shift and go to state 51
    DIV             shift and go to state 52
    AND             shift and go to state 53
    XOR             shift and go to state 54
    NEQ             shift and go to state 55
    GTE             shift and go to state 56
    LTE             shift and go to state 57
    EQ              shift and go to state 58
    LT              shift and go to state 59
    GT              shift and go to state 60
    OR              shift and go to state 61


state 23

    (45) expression -> SUB . expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . expression LSHIFT expression
    (25) expression -> . expression RSHIFT expression
    (26) expression -> . expression BITAND expression
    (27) expression -> . expression BITXOR expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression EXP expression
    (30) expression -> . expression MOD expression
    (31) expression -> . expression ADD expression
    (32) expression -> . expression SUB expression
    (33) expression -> . expression MUL expression
    (34) expression -> . expression DIV expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression NEQ expression
    (38) expression -> . expression GTE expression
    (39) expression -> . expression LTE expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression LT expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression OR expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . SUB expression
    (46) expression -> . INV expression
    (47) expression -> . NOT expression
    (48) expression -> . NAME DOT NAME
    (49) expression -> . NAME
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . SCI
    (53) expression -> . BOOL

    LPAREN          shift and go to state 24
    SUB             shift and go to state 23
    INV             shift and go to state 25
    NOT             shift and go to state 26
    NAME            shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    SCI             shift and go to state 30
